<resources>
    <string name="app_name">XPay SDK Sample</string>
    <string name="xpay">XPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">xPay</string>
    <string name="nav_header_subtitle">www.xpay.it</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">XPay SDK Sample</string>
    <string name="label_buy_now">Buy Now</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="choose_environment">Choose environment</string>
    <string name="save">Save</string>
    <string name="fill_fields">Error. Insert Alias, Secret Key and Environment</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_text">Settings will be modify. Press Ok to save them and return to Cart.</string>

    <string name="choice_browser_method">Choose browser method</string>
    <string name="choice_browser_method_text">Select your browser method</string>
    <string name="pay_web_view">WebView</string>
    <string name="pay_chrome_tab">Chrome Tab</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="product_name">productName</string>
    <string name="product_priece">productPriece</string>
    <string name="total_price">€ %1$s</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="qp">QP</string>
    <string name="xp">XP</string>
    <string name="pay">Pay</string>
    <string name="pay_nonce">Pay nonce</string>
    <string name="orders">Orders</string>
    <string name="done">Done</string>


    <string name="type_of_contract_title">Type of contract</string>
    <string name="type_of_contract_text">Choose your payment method:</string>

    <string name="qp_payment_canceled_title"> QP Payment cancelled </string>
    <string name="payment_canceled_text">Payment cancelled by user</string>
    <string name="qp_payment_success_title"> QP Payment successful </string>
    <string name="qp_payment_success_text"> QP Payment successful with circuit card: </string>
    <string name="qp_payment_error_title"> QP Payment error</string>
    <string name="payment_error_text">Payment error: </string>
    <string name="error_not_found">No errors available</string>

    <string name="nonce_payment_error_title">Nonce Payment error</string>
    <string name="nonce_payment_error_text">Nonce Payment error: </string>

    <string name="orders_report_title">Orders report</string>
    <string name="you_just_paied">You just paied:</string>
    <string name="success">SUCCESS</string>
    <string name="google_pay">Google Pay</string>
    <string name="x_xx">€ X,XX</string>
    <string name="productimg">productImg</string>
    <string name="total_amount">Total amount:</string>
    <string name="informations">Informations</string>

    <string name="invalid_card_data">Invalid card data insert.</string>

    <!-- Google Pay -->
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="user_paid_google">User has paid through Google Pay with circuit: </string>

    <string name="nonce_error_title">Nonce creation error</string>
    <string name="nonce_error_text">Error on nonce creation: </string>
    <string name="xpay_card_form">XPay Card Form</string>
    <string name="you_will_pay">You will pay</string>
    <string name="alias">Alias</string>
    <string name="secret_key">Secret key</string>
    <string name="environment">Environment:</string>
    <string name="merchant_settings">MERCHANT SETTINGS</string>
    <string name="xpay_sdk_sample_settings">XPAY SDK SAMPLE SETTINGS</string>
    <string name="google_pay_settings">GOOGLE PAY SETTINGS</string>
    <string name="terminal_id">Terminal ID</string>


</resources>
