<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.nexi.xpaysdksample.ui.main.result.ResultFrame">

    <TextView
        android:id="@+id/text_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/success"
        android:textColor="@color/nexiPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="33dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_confirm"
        android:layout_width="@dimen/fab_dim_125"
        android:layout_height="@dimen/fab_dim_125"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/green"
        android:src="@drawable/ic_check_white"
        app:borderWidth="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/you_just_paied"
        android:layout_below="@id/text_success"/>

    <TextView
        android:id="@+id/text_totalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/x_xx"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/textView4"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button_orders"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_fab"
        android:text="@string/orders" />

    <Button
        android:id="@+id/button_done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_fab"
        android:text="@string/done" />
</RelativeLayout>