<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/product_item_height"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="6dp"
    card_view:cardMaxElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="8dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:contentDescription="@string/productimg" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:layout_weight="55"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center_vertical"
            android:text="@string/product_priece" />
    </LinearLayout>


</androidx.cardview.widget.CardView>