<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/environmentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xpay_sdk_sample_settings"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
android:textColor="@color/nexi"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/environment"
                android:layout_weight="0.4"
                android:textSize="15sp"
                />

            <Spinner
                android:id="@+id/spinner_environment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:entries="@array/environments_arrays"
                android:prompt="@string/choose_environment"
                android:spinnerMode="dialog"
                android:padding="10dp"/>
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/merchantLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/environmentLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merchant_settings"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/nexi"

            android:textStyle="bold"

            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alias"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_secret_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_secret_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secret_key"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/googlePayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merchantLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_pay_settings"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/nexi"
            android:textStyle="bold"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_terminal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_merchant_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/terminal_id"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_merchant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_merchant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Display name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />






</android.support.constraint.ConstraintLayout>