<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.MainActivity"
    >


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@id/text_total_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"

        android:text="@string/total_price"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_pay_nonce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/text_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"

        android:text="@string/total_amount"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>

    <Button
        android:id="@+id/button_pay"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="15sp"
        android:layout_marginTop="11dp"

        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_total_amount" />

    <FrameLayout
        android:id="@+id/frameLayout_googlepay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_googlepay_min_height"
        android:minWidth="@dimen/button_googlepay_min_width"
        app:layout_constraintBottom_toBottomOf="@+id/button_pay_nonce"
        app:layout_constraintEnd_toStartOf="@id/button_pay_nonce"
        app:layout_constraintStart_toEndOf="@id/button_pay"
        app:layout_constraintTop_toTopOf="@+id/button_pay_nonce">

        <include
            android:id="@+id/button_googlepay"
            layout="@layout/googlepay_button"
            android:layout_width="90dp"
            android:layout_height="40dp"/>
    </FrameLayout>

    <Button
        android:id="@+id/button_pay_nonce"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"

        android:layout_marginTop="11dp"
        android:layout_marginEnd="15sp"

        android:text="@string/pay_nonce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice" />

</android.support.constraint.ConstraintLayout>